fixed box sizing button issue on firefox

--- a/app/assets/stylesheets/all/base.css.sass
+++ b/app/assets/stylesheets/all/base.css.sass
@@ -642,6 +642,7 @@ li.contractor-location
     width: 100%
     display: block
     box-sizing: border-box
+    -moz-box-sizing: border-box
     text-align: center
 
 .icon-linkedin.uiIconLinkedIn
